--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 三叶草国际语
+title: 三叶草国际语66677
 SEOTitle: 三叶草国际语 - 让沟通更容易
 header-img: img/post-bg-desk.jpg
 email: klovien@gmail.com
