--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: 三叶草国际语66677
-SEOTitle: 三叶草国际语 - 让沟通更容易
+SEOTitle: 三叶草国际语 - 让沟通更容易4545
 header-img: img/post-bg-desk.jpg
 email: klovien@gmail.com
 description: "中西融合, 即学即会, 从此不再辛苦背单词"
 keyword: "人工语言, 国际语, 世界语, 三叶草国际语, 三叶语"
-url: "https://klovien.github.io"          # your host, for absolute URL
+url: "https://zyzz123.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/klovien/klovien.github.io.git" # you code repository
+github_repo: "https://github.com/zyzz123/zyzz123.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
